validacion form/seccion historia/ estilos/ bugs version mobile

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ nav h1 {
   width: 100%;
   margin-left: 25% !important; }
 
+@media only screen and (min-width: 578px) and (max-width: 992px) {
+  .navbar-collapse ul {
+    margin-left: 0% !important; } }
+
 .carousel img {
   width: 100%;
   height: 500px; }
@@ -82,27 +86,26 @@ form label {
 
 form input {
   width: 100%;
-  border-radius: 5px;
-  border: 2px solid #436c49; }
+  border: none;
+  border-bottom: 1px solid #436c49; }
 
 .servicios {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr); }
+  grid-template-rows: repeat(2, 1fr);
+  margin-left: 10px; }
 
-.servicios div {
-  display: flex;
-  margin: 5%; }
+.bien {
+  color: #436c49;
+  font-weight: 600; }
 
-.servicios div input {
-  width: 20px;
-  height: 20px;
-  margin-left: 5%; }
+.mal {
+  color: red; }
 
 .botones {
   display: flex;
   width: 80%;
-  margin-left: 20%;
+  margin-left: 15%;
   justify-content: space-around; }
 
 .botones button {
@@ -121,6 +124,77 @@ form input {
 iframe {
   margin: 5%;
   border-radius: 25px; }
+
+.mapa iframe {
+  width: 100%;
+  height: 400px; }
+
+/* Checkbox */
+/* Contenedor */
+.servicios div {
+  display: block;
+  position: relative;
+  padding-left: 25px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 17px; }
+
+.servicios label {
+  margin: 0;
+  width: 100%; }
+
+/* escondemos el default checkbox */
+.servicios label input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0; }
+
+/* creamos un custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  background-color: #eee;
+  border-radius: 5px; }
+
+/* Al pasar el mouse encima, lo ponemos gris */
+.servicios div:hover input ~ .checkmark {
+  background-color: #ccc; }
+
+/* creamos el marcador (escondido al no seleccionar) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none; }
+
+/* mostramos el marcador al seleccionar */
+.servicios input:checked ~ .checkmark:after {
+  display: block; }
+
+/* estilo del marcador */
+.servicios .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg); }
+
+#c1 input:checked ~ .checkmark {
+  background-color: #436c49; }
+
+@media only screen and (min-width: 300px) and (max-width: 992px) {
+  .navbar-collapse ul {
+    margin-left: 0% !important; }
+  .servicios {
+    display: block !important; } }
 
 .accordion {
   padding: 0% 15%; }
@@ -147,12 +221,31 @@ iframe {
   z-index: 3;
   border-color: #436c49;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(14, 216, 45, 0.25); }
+  box-shadow: 0 0 0 0.25rem rgba(15, 216, 45, 0.25); }
+
+.video {
+  margin: 5% 0%;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.video iframe {
+  width: 80%;
+  height: 400px;
+  margin: 0%; }
 
 .row h5 {
+  display: flex;
   text-align: center;
   font-size: 21px;
-  font-weight: 500; }
+  font-weight: 500;
+  background-color: #436c49;
+  color: #f0f0f0;
+  height: 60px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  margin: 5% 15%; }
 
 * {
   font-family: 'Montserrat', sans-serif; }
