--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -17,8 +17,8 @@ form label{
 
 form input{
     width: 100%;
-    border-radius: 5px;
-    border: 2px solid $verde;
+    border: none;
+    border-bottom: 1px solid $verde;
 }
 
 
@@ -27,22 +27,22 @@ form input{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
-}
-.servicios div{
-    display: flex;
-    margin: 5%;
-
-}
-.servicios div input{
-    width: 20px;
-    height: 20px;
-    margin-left: 5%;
+    margin-left: 10px;
 }
 
+
+.bien{
+    color: $verde;
+    font-weight: 600;
+
+}
+.mal{
+    color: red;
+}
 .botones{
     display: flex;
     width: 80%;
-    margin-left: 20%;
+    margin-left: 15%;
     justify-content: space-around;
 }
 
@@ -66,3 +66,85 @@ iframe{
     border-radius: 25px;
 }
 
+.mapa iframe{
+    width: 100%;
+    height: 400px;
+}
+
+/* Checkbox */
+/* Contenedor */
+.servicios div {
+    display: block;
+    position: relative;
+    padding-left: 25px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 17px;
+  }
+  
+  .servicios label {
+    margin:0;
+    width: 100%;
+  }
+  /* escondemos el default checkbox */
+  .servicios label input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+  /* creamos un custom checkbox */
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: #eee;
+    border-radius: 5px;
+  }
+  
+  /* Al pasar el mouse encima, lo ponemos gris */
+  .servicios div:hover input ~ .checkmark {
+    background-color: #ccc;
+  }
+  
+  /* creamos el marcador (escondido al no seleccionar) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* mostramos el marcador al seleccionar */
+  .servicios input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+  /* estilo del marcador */
+  .servicios .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+#c1 input:checked ~ .checkmark {
+    background-color: $verde;
+}
+
+@media only screen and (min-width: 300px) and (max-width: 992px) {
+
+    .navbar-collapse ul{
+        margin-left: 0% !important;
+    }
+    .servicios{
+        display: block !important;
+    }
+}
