--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -24,3 +24,12 @@ nav h1{
     width: 100%;
     margin-left: 25% !important;
 }
+
+
+
+@media only screen and (min-width: 578px) and (max-width: 992px) {
+
+    .navbar-collapse ul{
+        margin-left: 0% !important;
+    }
+}
